fixed ribbon on mobile view

--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -21,6 +21,8 @@
         position: relative;
         background-color: #34709e;
         font-weight: normal;
+        font-size: 1rem;
+        max-width: 95%;
         width: 30rem;
         height: 3rem;
         margin: 2rem auto;
@@ -28,7 +30,7 @@
         line-height: 3rem;
 
         &::after{
-            right: 0;
+            right: -1px;
             top:0;
             position: absolute;
             content: '';
@@ -38,7 +40,7 @@
         }
 
         &::before{
-            left: 0;
+            left: -1px;
             top:0;
             position: absolute;
             content: '';
