--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -36,8 +36,8 @@ h1, h2, p, ul, li, ol {
 /* ABOUT START */
 .about {
 	padding: 5rem 5rem 0 5rem;
-	background-color: #fff;
-	color: #242938;
+	background-color: #d64e42;
+	color: #f2f3f8;
 	text-align: center;
 
 }
